@@ -1,3 +1,6 @@
+
+ - better error message for run() if called with an unblessed reference as query
+
 0.08, 2018-11-27
 
  - track whether transactions are open or closed
